--- a/index.html
+++ b/index.html
@@ -1,94 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>RANDOM STAGGER</title>
-		<link rel="stylesheet" href="styles.css" />
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-	</head>
-	<body>
-		<div class="container">
-			<h1 class="header">
-				bonjour
-			</h1>
-
-			<div class="titles">
-				<div class="title title-1"><h1>Pop</h1></div>
-				<div class="title title-2"><h1>AND</h1></div>
-				<div class="title title-3"><h1>Pets</h1></div>
-			</div>
-			<ul class="blocks">
-				<li class="block-1 block"></li>
-				<li class="block-2 block"></li>
-				<li class="block-3 block"></li>
-				<li class="block-4 block"></li>
-				<li class="block-5 block"></li>
-				<li class="block-6 block"></li>
-			</ul>
-		</div>
-		<script>
-			TweenMax.staggerFrom(
-				".titles > div",
-				0.8,
-				{
-					x: "-60",
-					ease: Power3.easeInOut,
-					opacity: "0",
-				},
-				2
-			);
-
-			TweenMax.staggerTo(
-				".titles > div",
-				0.8,
-				{
-					x: "60",
-					ease: Power3.easeInOut,
-					delay: 1.2,
-					opacity: "0",
-				},
-				2
-			);
-			TweenMax.staggerFrom(
-				"li",
-				3,
-				{
-					x: "-1600",
-					delay: 4.2,
-					ease: Expo.easeInOut,
-				},
-				0.16
-			);
-
-			TweenMax.staggerTo(
-				"li",
-				2.6,
-				{
-					x: "1600",
-					delay: 6.8,
-					ease: Expo.easeInOut,
-				},
-				0.2
-			);
-
-			var textWrapper = document.querySelector(".header");
-			textWrapper.innerHTML = textWrapper.textContent.replace(
-				/\S/g,
-				"<span class='letter'>$&</span>"
-			);
-
-			anime.timeline().add({
-				targets: ".header .letter",
-				opacity: [0, 1],
-				translateY: [80, 0],
-				translateZ: 0,
-				easing: "easeOutExpo",
-				duration: 2000,
-				delay: (el, i) => 8400 + 40 * i,
-			});
-		</script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@500;700&family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <title>Slide Animation</title>
+  </head>
+  <body>
+    <main>
+      <section class="landing">
+        <nav>
+          <h1 id="logo">Afloat</h1>
+          <ul class="nav-links">
+            <li>Home</li>
+            <li>Contact</li>
+            <li>About</li>
+          </ul>
+        </nav>
+        <h2 class="big-text">Stay Afloat</h2>
+      </section>
+    </main>
+    <div class="intro">
+      <div class="intro-text">
+        <h1 class="hide">
+          <span class="text">Creating inovation</span>
+        </h1>
+        <h1 class="hide">
+          <span class="text">For Everyday</span>
+        </h1>
+        <h1 class="hide">
+          <span class="text">people.</span>
+        </h1>
+      </div>
+    </div>
+    <div class="slider"></div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"
+      integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./app.js"></script>
+  </body>
 </html>
