--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Shoe Shop</title>
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./dist/app.css">
+    <link rel="stylesheet" href="./app.css">
 </head>
 
 <body>
@@ -661,7 +661,7 @@
 
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="./js/js-cloudimage-360-view.min.js"></script>
-    <script src="./js/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
