--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <button class="btn-lg btn-neon">own it now</button>
             </div>
             <div class="img-wrapper">
-                <div class="cloudimage-360" data-folder="./assets/shoe2/" data-filename="Golfshoe-01-{index}.png"
+                <div class="cloudimage-360" data-folder="./shoe2/" data-filename="Golfshoe-01-{index}.png"
                     data-autoplay="true" data-amount="24" data-disable-drag="true" data-disable-pointer-zoom="true">
                 </div>
             </div>
@@ -95,7 +95,7 @@
                         <div class="category-slider__item border-hover">
                             <div class="ratio-16-9">
                                 <div class="ratio-content bg-img"
-                                    style="background-image: url(./assets/category/mnz-OJTNpLmsSHs-unsplash.jpg);">
+                                    style="background-image: url(./mnz-OJTNpLmsSHs-unsplash.jpg);">
                                 </div>
                             </div>
                             <div class="category-slider__item__txt">nike</div>
@@ -107,7 +107,7 @@
                         <div class="category-slider__item border-hover">
                             <div class="ratio-16-9">
                                 <div class="ratio-content bg-img"
-                                    style="background-image: url(./assets/category/bitis.jpg);">
+                                    style="background-image: url(./bitis.jpg);">
                                 </div>
                             </div>
                             <div class="category-slider__item__txt">Bitis</div>
@@ -119,7 +119,7 @@
                         <div class="category-slider__item border-hover">
                             <div class="ratio-16-9">
                                 <div class="ratio-content bg-img"
-                                    style="background-image: url(./assets/category/omar-prestwich-jLEGurepDco-unsplash.jpg);">
+                                    style="background-image: url(./omar-prestwich-jLEGurepDco-unsplash.jpg);">
                                 </div>
                             </div>
                             <div class="category-slider__item__txt">addidas</div>
@@ -131,7 +131,7 @@
                         <div class="category-slider__item border-hover">
                             <div class="ratio-16-9">
                                 <div class="ratio-content bg-img"
-                                    style="background-image: url(./assets/category/revolt-164_6wVEHfI-unsplash.jpg);">
+                                    style="background-image: url(./revolt-164_6wVEHfI-unsplash.jpg);">
                                 </div>
                             </div>
                             <div class="category-slider__item__txt">revolt</div>
@@ -143,7 +143,7 @@
                         <div class="category-slider__item border-hover">
                             <div class="ratio-16-9">
                                 <div class="ratio-content bg-img"
-                                    style="background-image: url(./assets/category/thibaut-burckel-n2V5MLDPE-k-unsplash.jpg);">
+                                    style="background-image: url(./thibaut-burckel-n2V5MLDPE-k-unsplash.jpg);">
                                 </div>
                             </div>
                             <div class="category-slider__item__txt">thibaut</div>
@@ -155,7 +155,7 @@
                         <div class="category-slider__item border-hover">
                             <div class="ratio-16-9">
                                 <div class="ratio-content bg-img"
-                                    style="background-image: url(./assets/category/omar-prestwich-jLEGurepDco-unsplash.jpg);">
+                                    style="background-image: url(./omar-prestwich-jLEGurepDco-unsplash.jpg);">
                                 </div>
                             </div>
                             <div class="category-slider__item__txt">addidas</div>
@@ -167,7 +167,7 @@
                         <div class="category-slider__item border-hover">
                             <div class="ratio-16-9">
                                 <div class="ratio-content bg-img"
-                                    style="background-image: url(./assets/category/revolt-164_6wVEHfI-unsplash.jpg);">
+                                    style="background-image: url(./revolt-164_6wVEHfI-unsplash.jpg);">
                                 </div>
                             </div>
                             <div class="category-slider__item__txt">revolt</div>
@@ -179,7 +179,7 @@
                         <div class="category-slider__item border-hover">
                             <div class="ratio-16-9">
                                 <div class="ratio-content bg-img"
-                                    style="background-image: url(./assets/category/thibaut-burckel-n2V5MLDPE-k-unsplash.jpg);">
+                                    style="background-image: url(./thibaut-burckel-n2V5MLDPE-k-unsplash.jpg);">
                                 </div>
                             </div>
                             <div class="category-slider__item__txt">thibaut</div>
@@ -202,7 +202,7 @@
                             <div class="product-card__img">
                                 <div class="ratio ratio-1-1">
                                     <div class="ratio-content bg-img"
-                                        style="background-image: url(./assets/product/bitis-hunter.png);"></div>
+                                        style="background-image: url(./bitis-hunter.png);"></div>
                                 </div>
                             </div>
                             <div class="product-card__name">
@@ -223,7 +223,7 @@
                             <div class="product-card__img">
                                 <div class="ratio ratio-1-1">
                                     <div class="ratio-content bg-img"
-                                        style="background-image: url(./assets/product/2.png);"></div>
+                                        style="background-image: url(./2.png);"></div>
                                 </div>
                             </div>
                             <div class="product-card__name">
@@ -244,7 +244,7 @@
                             <div class="product-card__img">
                                 <div class="ratio ratio-1-1">
                                     <div class="ratio-content bg-img"
-                                        style="background-image: url(./assets/product/NikeZoom-01-22.png);">
+                                        style="background-image: url(./NikeZoom-01-22.png);">
                                     </div>
                                 </div>
                             </div>
@@ -266,7 +266,7 @@
                             <div class="product-card__img">
                                 <div class="ratio ratio-1-1">
                                     <div class="ratio-content bg-img"
-                                        style="background-image: url(./assets/product/10061024-01-11.png);"></div>
+                                        style="background-image: url(./10061024-01-11.png);"></div>
                                 </div>
                             </div>
                             <div class="product-card__name">
@@ -287,7 +287,7 @@
                             <div class="product-card__img">
                                 <div class="ratio ratio-1-1">
                                     <div class="ratio-content bg-img"
-                                        style="background-image: url(./assets/product/UnderArmour.png);"></div>
+                                        style="background-image: url(./UnderArmour.png);"></div>
                                 </div>
                             </div>
                             <div class="product-card__name">
@@ -308,7 +308,7 @@
                             <div class="product-card__img">
                                 <div class="ratio ratio-1-1">
                                     <div class="ratio-content bg-img"
-                                        style="background-image: url(./assets/product/Golfshoe-01-13.png);"></div>
+                                        style="background-image: url(./Golfshoe-01-13.png);"></div>
                                 </div>
                             </div>
                             <div class="product-card__name">
@@ -342,7 +342,7 @@
                             <div class="product-card__img">
                                 <div class="ratio ratio-1-1">
                                     <div class="ratio-content bg-img"
-                                        style="background-image: url(./assets/product/10061024-01-11.png);"></div>
+                                        style="background-image: url(./10061024-01-11.png);"></div>
                                 </div>
                             </div>
                             <div class="product-card__name">
@@ -363,7 +363,7 @@
                             <div class="product-card__img">
                                 <div class="ratio ratio-1-1">
                                     <div class="ratio-content bg-img"
-                                        style="background-image: url(./assets/product/UnderArmour.png);"></div>
+                                        style="background-image: url(./UnderArmour.png);"></div>
                                 </div>
                             </div>
                             <div class="product-card__name">
@@ -384,7 +384,7 @@
                             <div class="product-card__img">
                                 <div class="ratio ratio-1-1">
                                     <div class="ratio-content bg-img"
-                                        style="background-image: url(./assets/product/Golfshoe-01-13.png);"></div>
+                                        style="background-image: url(./Golfshoe-01-13.png);"></div>
                                 </div>
                             </div>
                             <div class="product-card__name">
@@ -405,7 +405,7 @@
                             <div class="product-card__img">
                                 <div class="ratio ratio-1-1">
                                     <div class="ratio-content bg-img"
-                                        style="background-image: url(./assets/product/2.png);"></div>
+                                        style="background-image: url(./2.png);"></div>
                                 </div>
                             </div>
                             <div class="product-card__name">
@@ -426,7 +426,7 @@
                             <div class="product-card__img">
                                 <div class="ratio ratio-1-1">
                                     <div class="ratio-content bg-img"
-                                        style="background-image: url(./assets/product/NikeZoom-01-22.png);">
+                                        style="background-image: url(./NikeZoom-01-22.png);">
                                     </div>
                                 </div>
                             </div>
@@ -448,7 +448,7 @@
                             <div class="product-card__img">
                                 <div class="ratio ratio-1-1">
                                     <div class="ratio-content bg-img"
-                                        style="background-image: url(./assets/product/10061024-01-11.png);"></div>
+                                        style="background-image: url(./10061024-01-11.png);"></div>
                                 </div>
                             </div>
                             <div class="product-card__name">
@@ -469,7 +469,7 @@
                             <div class="product-card__img">
                                 <div class="ratio ratio-1-1">
                                     <div class="ratio-content bg-img"
-                                        style="background-image: url(./assets/product/UnderArmour.png);"></div>
+                                        style="background-image: url(./UnderArmour.png);"></div>
                                 </div>
                             </div>
                             <div class="product-card__name">
@@ -498,7 +498,7 @@
             <div class="promotion__item border-hover">
                 <div class="ratio ratio-16-9">
                     <div class="ratio-content bg-img"
-                        style="background-image: url(./assets/category/alexander-rotker-l8p1aWZqHvE-unsplash.jpg);">
+                        style="background-image: url(./alexander-rotker-l8p1aWZqHvE-unsplash.jpg);">
                     </div>
                 </div>
                 <div class="promotion__item__info">
@@ -513,7 +513,7 @@
             <div class="promotion__item border-hover">
                 <div class="ratio ratio-16-9">
                     <div class="ratio-content bg-img"
-                        style="background-image: url(./assets/category/waqar-khalid-xHrkWhLVM8E-unsplash.jpg);">
+                        style="background-image: url(./waqar-khalid-xHrkWhLVM8E-unsplash.jpg);">
                     </div>
                 </div>
                 <div class="promotion__item__info">
@@ -536,32 +536,32 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="brands-logo">
-                            <img src="./assets/logo/bitis-1.png" alt="">
+                            <img src="./bitis-1.png" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="brands-logo">
-                            <img src="./assets/logo/addidas.png" alt="">
+                            <img src="./addidas.png" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="brands-logo">
-                            <img src="./assets/logo/converse.png" alt="">
+                            <img src="./converse.png" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="brands-logo">
-                            <img src="./assets/logo/fila.png" alt="">
+                            <img src="./fila.png" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="brands-logo">
-                            <img src="./assets/logo/nike.png" alt="">
+                            <img src="./nike.png" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="brands-logo">
-                            <img src="./assets/logo/puma.png" alt="">
+                            <img src="./puma.png" alt="">
                         </div>
                     </div>
                 </div>
