--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="header">
                 <div class="header__logo">
                     <a href="#">
-                        <span class="txt-main">Tua</span>Shop
+                        Pop <span class="txt-main">and</span> Pets
                     </a>
                 </div>
                 <div class="header__toggle">
@@ -38,15 +38,23 @@
     <!-- HERO SECTION -->
     <div class="container">
         <div class="hero-section">
-            <div class="hero-section__txt">
-                <div class="hero-section__txt__main">Puma</div>
+            <div class="hero-section__brand neon-txt">
+                Accessoires pour animaux 🐶
             </div>
-            <span class="hero-section__brand neon-txt">
-                PUMA x TMC Marathon Mixtape
-            </span>
+
+
+            <div class="section__header">
+                <p>Nous sommes une équipe de jeunes entrepreneurs de <a href="http://www.indloverval.be/"target="_blank"><em>L'institut Notre-Dame Loverval</em></a>.<br><br>
+                    Nous vous proposons des articles personnalisables pour vos animaux de compagnies. Le processus de production est écologique et fait main !</p>
+            </div>
+
+
             <div class="hero-section__btn">
-                <button class="btn-lg btn-neon">own it now</button>
+                <button class="glow-on-hover" type="button">Nous contacter</button>
             </div>
+
+           
+
             <div class="img-wrapper">
                 <div class="cloudimage-360" data-folder="./shoe2/" data-filename="Golfshoe-01-{index}.png"
                     data-autoplay="true" data-amount="24" data-disable-drag="true" data-disable-pointer-zoom="true">
@@ -60,7 +68,7 @@
     <div class="sidebar">
         <div class="sidebar__logo">
             <a href="#">
-                <span class="txt-main">Tua</span>Shop
+                <em>Pop <span class="txt-main">and</span> Pets</em>
             </a>
         </div>
         <ul class="sidebar__nav">
@@ -331,166 +339,7 @@
     </div>
     <!-- END NEW PRODUCT -->
 
-    <!-- FEATURE PRODUCT -->
-    <div class="container">
-        <div class="section">
-            <div class="section__header">Feature Products</div>
-            <div class="swiper swiper-paginations product-slider">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="product-card">
-                            <div class="product-card__img">
-                                <div class="ratio ratio-1-1">
-                                    <div class="ratio-content bg-img"
-                                        style="background-image: url(./10061024-01-11.png);"></div>
-                                </div>
-                            </div>
-                            <div class="product-card__name">
-                                Suede Teams Men's Sneakers
-                            </div>
-                            <div class="product-card__footer">
-                                <div class="product-card__footer__price">$299</div>
-                                <div class="product-card__footer__btn">
-                                    <button class="btn-neon">
-                                        own it now
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="product-card">
-                            <div class="product-card__img">
-                                <div class="ratio ratio-1-1">
-                                    <div class="ratio-content bg-img"
-                                        style="background-image: url(./UnderArmour.png);"></div>
-                                </div>
-                            </div>
-                            <div class="product-card__name">
-                                Suede Teams Men's Sneakers
-                            </div>
-                            <div class="product-card__footer">
-                                <div class="product-card__footer__price">$299</div>
-                                <div class="product-card__footer__btn">
-                                    <button class="btn-neon">
-                                        own it now
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="product-card">
-                            <div class="product-card__img">
-                                <div class="ratio ratio-1-1">
-                                    <div class="ratio-content bg-img"
-                                        style="background-image: url(./Golfshoe-01-13.png);"></div>
-                                </div>
-                            </div>
-                            <div class="product-card__name">
-                                Suede Teams Men's Sneakers
-                            </div>
-                            <div class="product-card__footer">
-                                <div class="product-card__footer__price">$299</div>
-                                <div class="product-card__footer__btn">
-                                    <button class="btn-neon">
-                                        own it now
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="product-card">
-                            <div class="product-card__img">
-                                <div class="ratio ratio-1-1">
-                                    <div class="ratio-content bg-img"
-                                        style="background-image: url(./2.png);"></div>
-                                </div>
-                            </div>
-                            <div class="product-card__name">
-                                Suede Teams Men's Sneakers
-                            </div>
-                            <div class="product-card__footer">
-                                <div class="product-card__footer__price">$299</div>
-                                <div class="product-card__footer__btn">
-                                    <button class="btn-neon">
-                                        own it now
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="product-card">
-                            <div class="product-card__img">
-                                <div class="ratio ratio-1-1">
-                                    <div class="ratio-content bg-img"
-                                        style="background-image: url(./NikeZoom-01-22.png);">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="product-card__name">
-                                Speedcat LS Men's Motorsport
-                            </div>
-                            <div class="product-card__footer">
-                                <div class="product-card__footer__price">$299</div>
-                                <div class="product-card__footer__btn">
-                                    <button class="btn-neon">
-                                        own it now
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="product-card">
-                            <div class="product-card__img">
-                                <div class="ratio ratio-1-1">
-                                    <div class="ratio-content bg-img"
-                                        style="background-image: url(./10061024-01-11.png);"></div>
-                                </div>
-                            </div>
-                            <div class="product-card__name">
-                                Suede Teams Men's Sneakers
-                            </div>
-                            <div class="product-card__footer">
-                                <div class="product-card__footer__price">$299</div>
-                                <div class="product-card__footer__btn">
-                                    <button class="btn-neon">
-                                        own it now
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="product-card">
-                            <div class="product-card__img">
-                                <div class="ratio ratio-1-1">
-                                    <div class="ratio-content bg-img"
-                                        style="background-image: url(./UnderArmour.png);"></div>
-                                </div>
-                            </div>
-                            <div class="product-card__name">
-                                Suede Teams Men's Sneakers
-                            </div>
-                            <div class="product-card__footer">
-                                <div class="product-card__footer__price">$299</div>
-                                <div class="product-card__footer__btn">
-                                    <button class="btn-neon">
-                                        own it now
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-pagination"></div>
-            </div>
-        </div>
-    </div>
-    <!-- END FEATURE PRODUCT -->
+    
 
     <!-- PROMOTION -->
     <div class="section">
@@ -581,9 +430,9 @@
                             <li>
                                 1234 Ba Ria Vung Tau
                             </li>
-                            <li>Tel: 01234 567 890</li>
-                            <li>Email: store@mail.com</li>
-                            <li>8:00 - 19:00, Monday - Saturday</li>
+                            <li>Tel: +33 6 42 ...</li>
+                            <li>Email: pops.and.pets2021@gmail.com</li>
+                            <li>8:00 - 19:00, Lundi - Samedi</li>
                         </ul>
                     </div>
                 </div>
